# dagster-workspace

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  workspace.yaml
data/inventory/: python_version_check.json
data/sales/: python_version_check.json
scripts/: demo_materialize.sh  demo_results.sh  demo_up.sh
