[project]
name = "my_dagster_workspace"
version = "0.1.0"
description = "Dagster tutorial project for multiple code locations."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[dependency-groups]
dev = ["dagster-webserver", "pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
modules = [
    { type = "module", name = "packages.inventory.src.inventory.definitions", code_location_name = "inventory" },
    { type = "module", name = "packages.sales.src.sales.definitions", code_location_name = "sales" }
]

[tool.setuptools.packages.find]
exclude = [
    "packages.inventory.tests",
    "packages.sales.tests"
]
